# minicode

./: .gitignore  CMakeLists.txt  README.md  install.sh
src/: main.cpp
src/editor/: Editor.cpp  Editor.hpp
src/lsp/: LSPClient.cpp  LSPClient.hpp
src/parser/: CodeParser.cpp  CodeParser.hpp
src/syntax/: SyntaxHighlighter.cpp  SyntaxHighlighter.hpp
src/ui/: MainWindow.cpp  MainWindow.hpp
src/utils/: FileManager.cpp  FileManager.hpp
